# n-body-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
kernels/: kernel_1.cl  n_squared.cl
shaders/: basic.frag  basic.vert  particle.frag  particle.vert
src/: camera.cpp  camera.hpp  cl_wrapper.cpp  cl_wrapper.h  cl_wrapper.hpp  config.cpp  config.hpp  gl_window.cpp  gl_window.h  gl_window_wrapper.cpp  gl_window_wrapper.h  gl_wrapper.cpp  gl_wrapper.h  gl_wrapper.hpp  globals.cpp  globals.hpp  imgui_window.cpp  imgui_window.h  imgui_window_wrapper.cpp  imgui_window_wrapper.h  imgui_wrapper.cpp  imgui_wrapper.h  imgui_wrapper.hpp  kernel.cpp  kernel.h  kernel.hpp  main.cpp  main_temp.cpp  particle_buffer.cpp  shader.cpp  shader.h  shader.hpp  state.cpp  state.hpp  utilities.h  utilities.hpp  world_generators.cpp  world_generators.hpp  world_state.cpp  world_state.hpp
src/imgui/: imgui_widgets.cpp
src/opencl_wrapper/: opencl.hpp
src/shaders/: basic.frag
src/world_generators/: black_hole_sphere_generator.cpp  sphere_generator.cpp  sphere_shell_generator.cpp  two_spheres_generator.cpp
src/world_gens/: black_hole_sphere_generator.cpp  galaxy_generator.cpp  sphere_generator.cpp  sphere_shell_generator.cpp  two_galaxies_generator.cpp  two_spheres_generator.cpp  world_generators.cpp  world_generators.hpp
